<resources>
    <string name="app_name">Github User App</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="number">number</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="location">Location</string>
</resources>
